@@ -23,11 +23,14 @@ PARFETCH_MAX_HOST_CONNECTIONS?=		1
 # Global connection limit (see CURLMOPT_MAX_TOTAL_CONNECTIONS(3))
 PARFETCH_MAX_TOTAL_CONNECTIONS?=	4
 
-_PARFETCH_ENV=	dp_PARFETCH_MAX_HOST_CONNECTIONS=${PARFETCH_MAX_HOST_CONNECTIONS} \
+_PARFETCH_ENV=	${_DO_FETCH_ENV} \
+		${_MASTER_SITES_ENV} \
+		${_PATCH_SITES_ENV} \
+		dp__PARFETCH_MAKESUM='${_PARFETCH_MAKESUM}' \
+		dp_CHECKSUM_ALGORITHMS='${CHECKSUM_ALGORITHMS:tu}' \
+		dp_PARFETCH_MAX_HOST_CONNECTIONS=${PARFETCH_MAX_HOST_CONNECTIONS} \
 		dp_PARFETCH_MAX_TOTAL_CONNECTIONS=${PARFETCH_MAX_TOTAL_CONNECTIONS}
-
-_DO_PARFETCH=	${SETENV} ${_DO_FETCH_ENV} ${_MASTER_SITES_ENV} \
-		${_PATCH_SITES_ENV} ${_PARFETCH_ENV} ${PARFETCH} \
+_DO_PARFETCH=	${SETENV} ${_PARFETCH_ENV} ${PARFETCH} \
 		${DISTFILES:C/.*/-d '&'/} \
 		${PATCHFILES:C/:-p[0-9]//:C/.*/-p '&'/}
 
@@ -41,6 +44,13 @@ checksum:
 .  if !defined(NO_CHECKSUM)
 	@${_DO_PARFETCH}
 .  endif
+.endif
+
+.if !target(makesum)
+makesum: check-sanity
+	@${MAKE} fetch _PARFETCH_MAKESUM=yes NO_CHECKSUM=yes DISABLE_SIZE=yes \
+		DISTFILES="${DISTFILES}" MASTER_SITES="${MASTER_SITES}" \
+		PATCH_SITES="${PATCH_SITES}"
 .endif
 
 .endif
